<resources>
    <item name="environment" type="string" format="string">prod</item> <!-- dev, prod -->
    <string name="app_name">Try Meme!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_create_meme">Create Meme</string>

    <item name="create_meme_top_row_height" type="string">40dp</item>

    <string name="share_string">Share</string>
    <string name="save_string">Save</string>
    <string name="edit_top_text_string">Top Text</string>
    <string name="edit_bottom_text_string">Bottom Text</string>
    <string name="title_activity_view_meme">ViewMeme</string>

    <item name="sslPort" format="integer" type="integer">8443</item>
    <item name="nonSslPort" format="integer" type="integer">8080</item>

    <string name="sslHttp">https://</string>
    <string name="nonSslHttp">http://</string>
    <string name="prodWebServiceAddress">http://arcane-chamber-4976.herokuapp.com</string> 
    <string name="devWebServiceAddress">http://dylan-mint:8080</string> 
    <string name="prodBackgroundFileAddress">https://s3.amazonaws.com/mgs_dev_bucket/meme_imgs</string>
    <string name="backgroundThumbDir">thumbs2</string>
    <string name="webServiceMemesCreateJson">/memes/create/json</string>
    <string name="webServiceMemeBackgroundPopularityByTypeNameJson">/memebackgroundpopularitys/find/json</string>
    <string name="webServiceMemeUserCreateJson">/memeusers/create/json</string>
    <string name="webServiceListMemeBackgroundsJson">/memebackgrounds/list/json/1/100</string>
    <string name="webServiceListSampleMemesForBackgroundIdPre">/samplememes/listforbackground/json</string>
    <string name="webServiceListSampleMemesForBackgroundIdPost">/1/10</string>
    <string name="webServiceListFavoriteMemeBackgroundsForUserId">/memeuserfavorites/backgroundsforuserid/json/1/10</string>
    <string name="webServiceStoreMemeFavoriteJson">/memeuserfavorites/store/json</string>
    <string name="webServiceRemoveMemeFavoriteJson">/memeuserfavorites/remove/json</string>
    <string name="webServiceFindMemeBackgroundsByNameJson">/memebackgrounds/findbyname/json</string>
    <string name="webServiceGetMemesForUserJson">/memes/get_for_user/json/1/100</string>
    <string name="eulaDialogMessage">Use of the Try Meme! app requires acceptance of the EULA (located at http://www.trymeme.com/eula.txt) Do you accept the EULA?</string>
    <string name="eulaDialogAccept">Accept</string>
    <string name="eulaDialogDecline">Decline</string>

    <string name="memeStoredSuccessMessage">Saved! You can now view this meme under My Memes.</string>
    <string name="memeStoredFailMessage">We had trouble saving your meme!</string>
    
    <item name="maxFontSize" format="integer" type="integer">35</item>
    <item name="initialFontSize" format="integer" type="integer">26</item>

    <string name="bundleconst_memebg">memebg</string>
    <string name="bundleconst_samplememes">samplememes</string>
    <string name="bundleconst_loaded">loaded</string>
    <string name="bundleconst_pageradapter">pageradapter</string>
    <string name="bundleconst_sampledlist">sampledlist</string>
    <string name="filter_bar_btn_txt_popular">Popular</string>
    <string name="filter_bar_btn_txt_all">All</string>
    <string name="icon_heart_cont_descr">heart</string>
    <string name="icon_magnifier_cont_descr">magnifier</string>
    <string name="no_favorites_msg">No Favorites</string>
    <string name="string_hint">Search for Meme Types</string>
    <string name="title_activity_meme_type_search_results">Search Results</string>

    <item name="debug_toasts_enabled" format="boolean" type="bool">false</item>
    <item name="ad_refresh_time_ms" format="integer" type="integer">5000</item>

    <string name="favorite_button_content_descr">favorite button</string>
    <string name="empty_string" />

    <item name="meme_list_descr_font_size" format="dimension" type="dimen">16sp</item>
    <item name="connectionUseCaches" format="boolean" type="bool">true</item>
    <item name="connectionTimeoutMs" format="integer" type="integer">30000</item>
    <item name="meme_list_item_height" format="dimension" type="dimen">95dp</item>
    <item name="meme_list_item_heart_btn_min_width" format="dimension" type="dimen">65dp</item>
    <item name="meme_list_item_heart_btn_max_width" format="dimension" type="dimen">165dp</item>
    <item name="meme_list_item_thumb_min_width" format="dimension" type="dimen">75dp</item>
    <item name="meme_list_item_thumb_max_width" format="dimension" type="dimen">75dp</item>
    <item name="meme_list_item_text_min_width" format="dimension" type="dimen">600dp</item>
    <item name="meme_list_item_text_max_width" format="dimension" type="dimen">600dp</item>
    <color name="back_transparent">#80000000</color>
    <string name="refresh_menu_item_text">Refresh</string>
    <string name="my_meme_item_text">My Memes</string>
    <string name="key_popular_backgrounds">popular_backgrounds</string>
    <string name="key_my_memes">my_memes</string>
    <string name="key_sample_memes">sample_memes-</string>
    <string name="key_thumb">thumb-</string>
    <string name="key_background">background-</string>
    <string name="popular_type_name">popular</string>
    <string name="fav_backgrounds">fav_backgrounds</string>
    <item format="float" type="dimen" name="memeTextViewTextMultiplier">0.0008</item>
    <item format="float" type="dimen" name="memeTextViewTextConstant">35</item>

</resources>